# Voiceprint-Studio

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_app.bat  start_app.command
data/: sample_frames.json  tuning.json
data/models/spkrec-ecapa-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
docs/: design.md  requirements.md
src/voice_recognition/: __init__.py  __main__.py  app.py  gui.py  live_console.py  live_service.py  web_controller.py  web_frontend.py
src/voice_recognition/audio/: __init__.py  input_manager.py  loopback_setup.py  signal_processor.py
src/voice_recognition/core/: __init__.py  models.py  vector_ops.py
src/voice_recognition/evaluation/: auto_tune.py  offline_eval.py
src/voice_recognition/recognition/: __init__.py  diarization.py  engine.py  enrollment.py  matcher.py
src/voice_recognition/storage/: __init__.py  base.py  factory.py  session_repository.py  sqlite_repository.py
src/voice_recognition/ui/: __init__.py  main_window.py
tests/: test_dual_scope.py  test_engine.py  test_engine_streaming_regression.py  test_enrollment.py  test_input_manager.py  test_live_service.py  test_loopback_setup.py  test_matcher_behavior.py  test_offline_eval_metrics.py  test_signal_processor.py  test_signal_processor_neural.py  test_web_controller.py
