[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-recognition-demo"
version = "0.1.0"
description = "Speaker recognition demo with global/session enrollment scopes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<2.0",
  "sounddevice>=0.4.6",
  "soundfile>=0.13.1",
  "torch==2.6.0",
  "torchaudio==2.6.0",
  "speechbrain>=1.0.3",
  "silero-vad>=6.2.0",
  "transformers==4.41.2",
  "datasets==2.19.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
